hb-policies/hb-custom-constraints/require-namespace-network-policy-example.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNamespaceNetworkPolicies
metadata:
  name: require-namespace-network-policies-example
spec:
  enforcementAction: dryrun
